--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
 .DS_STORE
+Source/Suporting\ Files/Secrets.swift
 
 ## Build generated
 build/
